# quant-ai

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs-deploy.yml
notebooks/: dev.ipynb
