[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-ai"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "yfinance"
]
requires-python = ">=3.10"
authors = [
    { name = "Daryl Kang", email = "darylkang@live.com" }
]
description = "Alpha discovery meets AI reasoning."
readme = "README.md"

[project.urls]
source = "https://github.com/darylkang/quant-ai"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "alpha.__version__" }
